[package]
name = "telegram-analysis"
version = "0.1.0"
authors = ["Roman Poltorabatko <barabum@duck,com>"]
edition = "2021"

[dependencies]
eframe = "0.29.1"
egui = "0.29.1"
wasm-bindgen = "0.2.93"
wasm-bindgen-futures = "0.4.43"
log = "0.4.22"
web-sys = { version = "0.3.70", features = [
    "Window",
    "Document",
    "HtmlInputElement",
    "Event",
    "File",
    "FileReader",
    "ProgressEvent",
    "EventTarget",
    "console",
] }
futures = "0.3"
egui-notify = "0.16.0"
serde = { version = "1.0.210", features = ["derive"] }
chrono = { version = "0.4.38", features = ["serde"]}
serde_json = "1.0.128"
egui_plot = "0.29.0"
